tests/snapshots/tui_tests__thread_scroll.snap
---
source: tests/tui_tests.rs
expression: output
---
Scrolled  Alice  2025-01-02 12:00:00                                            
                                                                                
────────────────────────────────────────────────────────────────────────────────
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
j/k: scroll  Ctrl+u/Ctrl+d: page  h/q/Esc: back
