tests/snapshots/tui_tests__thread_selection_on_description.snap
---
source: tests/tui_tests.rs
expression: output
---
#1 Test issue  Alice  2025-01-02 12:00:00                                       
                                                                                
────────────────────────────────────────────────────────────────────────────────
│ Description text                                                              
                                                                                
  Bob 2025-01-01 10:00:00                                                       
  A comment                                                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Comment ─────────────────────────────────────────────────────────────────────┐
│Ctrl+W j to comment                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
