tests/snapshots/tui_tests__thread_selection_on_hidden_comment.snap
---
source: tests/tui_tests.rs
expression: output
---
#1 Test  Alice  2025-01-02 12:00:00                                             
                                                                                
────────────────────────────────────────────────────────────────────────────────
  Description                                                                   
                                                                                
  Bob 2025-01-02 10:00:00                                                       
  visible                                                                       
│                                                                               
│   hidden                                                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Comment ─────────────────────────────────────────────────────────────────────┐
│Ctrl+W j to comment                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
