tests/snapshots/tui_tests__thread_view_basic.snap
---
source: tests/tui_tests.rs
expression: output
---
 My Thread
ThreadAuthor — 2025-01-01 00:00:00
A markdown description with formatting

────────────────────────────────────────────────────────────────────────────────
