tests/snapshots/tui_tests__thread_view_with_comments.snap
---
source: tests/tui_tests.rs
expression: output
---
 Discussion
ThreadAuthor — 2025-01-01 00:00:00
A markdown description with formatting

────────────────────────────────────────────────────────────────────────────────

Commenter0 — 2025-01-01 00:00:00
Comment number 0

Commenter1 — 2025-01-02 00:00:00
Comment number 1

Commenter2 — 2025-01-03 00:00:00
Comment number 2
