tests/snapshots/tui_tests__thread_with_hidden_comment.snap
---
source: tests/tui_tests.rs
expression: output
---
#1 Bug  Alice  2025-01-02 12:00:00                                              
                                                                                
────────────────────────────────────────────────────────────────────────────────
│ Some description                                                              
                                                                                
  Bob 2025-01-02 10:00:00                                                       
  visible comment                                                               
                                                                                
    hidden                                                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Comment ─────────────────────────────────────────────────────────────────────┐
│Ctrl+W j to comment                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
